# hamarc

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/argparser/: ArgParser.hpp
lib/include/hamarc/: BitOperator.hpp  Copydata.hpp  Decoder.hpp  Encoder.hpp  FileOperator.hpp  HamArchiver.hpp
lib/src/: CMakeLists.txt
lib/src/argparser/: ArgContainer.cpp  ArgParser.cpp  CMakeLists.txt
lib/src/hamarc/: BitOperator.cpp  CMakeLists.txt  Copydata.cpp  Decoder.cpp  Encoder.cpp  FileOperator.cpp  HamArchiver.cpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  copydata_test.cpp  decoder_test.cpp  encoder_test.cpp  hamarchiver_test.cpp
tests/data/copydata_test/: in_3.txt  out_3.txt
tests/data/decoder_test/: in_1.txt  in_2.txt
tests/data/encoder_test/: in_2.txt  in_3.txt  in_4.txt  in_5.txt  in_6.txt
tests/data/hamarchiver_test/: file_1.txt  file_2.txt  file_3.txt  Лев_Толстой._Война_и_мир._Том_I.txt
tests/lib/: CMakeLists.txt  FileComparator.cpp  FileComparator.hpp
